Update navigation to include 'DSA Studies' link alongside 'Resume' in multiple HTML files

--- a/resume.html
+++ b/resume.html
@@ -196,7 +196,10 @@
     <header>
         <nav>
             <a href="/" class="logo">Blog</a>
-            <a href="/resume.html">Resume</a>
+            <div style="display: flex; gap: 1.5rem;">
+                <a href="/resume.html">Resume</a>
+                <a href="/dsa-studies.html">DSA Studies</a>
+            </div>
         </nav>
     </header>
     
