--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header>
       <nav>
         <a href="/" class="logo">Blog</a>
-        <a href="/resume.html">Resume</a>
+        <div style="display: flex; gap: 1.5rem;">
+          <a href="/resume.html">Resume</a>
+          <a href="/dsa-studies.html">DSA Studies</a>
+        </div>
       </nav>
     </header>
 
